Edited "Create new database" page UI
Signed-off-by: Sanguine <PavelKamenko@mail.ru>

--- a/PasswordManager/PasswordManager/MainPage.xaml
+++ b/PasswordManager/PasswordManager/MainPage.xaml
@@ -32,7 +32,7 @@
             VerticalOptions="Center"
             Clicked="ToCreate"/>
 
-        <Label Text="Recent databaces:" 
+        <Label Text="Recent databases:" 
             Margin="20,0,20,0"
             HorizontalOptions="Start"
             VerticalOptions="Center"
