--- a/PasswordManager/PasswordManager/NewFieldPage.xaml
+++ b/PasswordManager/PasswordManager/NewFieldPage.xaml
@@ -4,15 +4,27 @@
              Title="New entry"
              x:Class="App1.NewFieldPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Name:"/>
-            <Entry x:Name ="nameEntry"/>
-            <Label Text="Login:"/>
-            <Entry x:Name ="loginEntry"/>
-            <Label Text="Password:"/>
-            <Entry x:Name ="passwordEntry"/>
-            <Label Text="Url:"/>
-            <Entry x:Name ="urlEntry"/>
+        <StackLayout Margin="10,10,10,10">
+            <Label Text="Name:" TextColor="Black"/>
+            <StackLayout Orientation="Horizontal">
+                <Entry x:Name ="nameEntry" WidthRequest="200" />
+            </StackLayout>
+            <Label Text="Login:" TextColor="Black"/>
+            <StackLayout Orientation="Horizontal">
+                <Image Source="user_icon.xml"/>
+                <Entry x:Name ="loginEntry" WidthRequest="200"/>
+            </StackLayout>
+            <Label Text="Password:" TextColor="Black"/>
+            <StackLayout Orientation="Horizontal" >
+                <Image Source="key_icon.xml"/>
+                <Entry x:Name ="passwordEntry" IsPassword="True" WidthRequest="200"/>
+                <Button Image="eye_icon.xml" Clicked="Reveal" BackgroundColor="White" BorderColor="Black" BorderWidth="3" BorderRadius="4" WidthRequest="50"/>
+            </StackLayout>
+            <Label Text="URL:" TextColor="Black"/>
+            <StackLayout Orientation="Horizontal" >
+                <Image Source="url_icon.xml"/>
+                <Entry x:Name ="urlEntry"  WidthRequest="200"/>
+            </StackLayout>
             <Button Text="Save" Clicked="Save"/>
         </StackLayout>
     </ContentPage.Content>
